--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ node_modules
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+/tf/build.zip
+.safurai/*
+/tf/.terraform.*
+/tf/.terraform/*
+/tf/terraform.*
