--- a/.github/workflows/tf-deploy.yml
+++ b/.github/workflows/tf-deploy.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - master
 
+defaults:
+  run:
+    working-directory: ${{ env.tf_actions_working_dir }}
+
 jobs: 
   terraform:
     runs-on: ubuntu-latest
