Added aws configure to action

--- a/.github/workflows/tf-deploy.yml
+++ b/.github/workflows/tf-deploy.yml
@@ -32,6 +32,13 @@ jobs:
 
     - name: Rebuild the dist/ directory
       run: npm run build
+
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets. AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets. AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-west-2
     
     - name: Terraform Init
       id: init
